made changes to commites acc to doc

--- a/Callforpapers.html
+++ b/Callforpapers.html
@@ -133,36 +133,7 @@
         <p>
             Authors are invited to submit full papers for
             consideration (maximum 10 pages) in SCI 2020. The Conference looks for significant contributions to all major fields of the Computer Science and Information Technology in theoretical and practical aspects. The aim of the conference is to provide a platform to the researchers and practitioners from both academia as well as industry to meet and share cutting-edge development in the field. Authors are solicited to contribute to the conference by submitting articles that illustrate research results, projects, surveying works and industrial experiences that describe significant advances in the following areas, but are not limited to.
-        </p>
-        <h2>Paper submission guidelines</h2>
-        <p>
-            Submission of paper must be original and should
-            not have been previously published or under consideration
-            for publication. All papers will be sent for peer review and the corresponding
-            author will be notified of the outcome of the review process. The proceedings of the conference
-            will be published by Smart Innovation Systems and Technologies Series,
-            Springer (Approved). Extended versions of selected best papers will expected to be appear
-            in SCI/Scopus indexed international journals. At least one of the authors of each accepted paper
-            must register for the conference. All submissions are to be done electronically through easychair link.<br><br>
-            Before submission, <a href="https://www.springer.com/gp/authors-editors/editors/publishing-ethics-for-journals/4176">click hereto read the Springer publication ethis and guidelines.</a>
-            <br>
-            All submissions must comply with the Springer SIST format: <a href="https://www.springer.com/gp/authors-editors/conference-proceedings/conference-proceedings-guidelines">https://www.springer.com/gp/authors-editors/conference-proceedings/conference-proceedings-guidelines</a>
-            <br>
-            <h4>Page limit for Camera Ready papers is 8 pages (With regular registration fees).<br><br>Extra page charge: INR 1500 per page (for Indian authors) and USD 50 per page (for foreign authors).</h4>
-        </p>
-        <br>
-        <h2>Template Download Links</h2>
-
-        <a href="ftp://ftp.springernature.com/cs-proceeding/svproc/templates/ProcSci_TeX.zip">LaTeX Template</a><br>
-        <a href="ftp://ftp.springernature.com/cs-proceeding/llncs/word/splnproc1703.zip">Microsoft Wors Template</a><br>
-        <a href="ftp://ftp.springernature.com/cs-proceeding/svproc/guidelines/Springer_Guidelines_for_Authors_of_Proceedings.pdf">Springer Proceedings Guidelines for Authors</a><br>
-
-        <!--Submitted papers should neither be previously published nor under consideration for publication elsewhere.
-            All papers will be refereed through a peer review process.-->
-        <br />
-
-        <img src="./img/springer.png" class="img-fluid"
-            style="width:30%;height:30%;padding:30px; display: block; margin-left: auto; margin-right: auto;" alt="">
+        </p><br /><br />
         <ul class="list-group list-group-horizontal" style=" display: inline-block;">
             <li class="list-group-item" style="text-align: center;"><b style="color: black;">Conference Focus Areas</b>
             </li>
@@ -201,7 +172,35 @@
                     </li>
                 </div>
             </div>
-        </ul>
+        </ul><br /><br />
+
+        <img src="./img/springer.png" class="img-fluid"
+            style="width:30%;height:30%;padding:30px; display: block; margin-left: auto; margin-right: auto;" alt=""><br />
+        <h2>Paper submission guidelines</h2>
+        <p>
+            Submission of paper must be original and should
+            not have been previously published or under consideration
+            for publication. All papers will be sent for peer review and the corresponding
+            author will be notified of the outcome of the review process. The proceedings of the conference will be published in Smart Innovation Systems and Technologies Series, Springer (Approved). Extended versions of selected best papers will be expected to appear in SCI/Scopus indexed international journals.
+            At least one of the authors of each accepted paper
+            must register for the conference. All submissions are to be done electronically through easychair link.<br><br>
+            Before submission, <a href="https://www.springer.com/gp/authors-editors/editors/publishing-ethics-for-journals/4176">click hereto read the Springer publication ethis and guidelines.</a>
+            <br>
+            All submissions must comply with the Springer SIST format: <a href="https://www.springer.com/gp/authors-editors/conference-proceedings/conference-proceedings-guidelines">https://www.springer.com/gp/authors-editors/conference-proceedings/conference-proceedings-guidelines</a>
+            <br>
+            <h4>Page limit for Camera Ready papers is 8 pages (With regular registration fees).<br><br>Extra page charge: INR 1500 per page (for Indian authors) and USD 50 per page (for foreign authors).</h4>
+        </p>
+        <br>
+        <h2>Template Download Links</h2>
+
+        <a href="ftp://ftp.springernature.com/cs-proceeding/svproc/templates/ProcSci_TeX.zip">LaTeX Template</a><br>
+        <a href="ftp://ftp.springernature.com/cs-proceeding/llncs/word/splnproc1703.zip">Microsoft Wors Template</a><br>
+        <a href="ftp://ftp.springernature.com/cs-proceeding/svproc/guidelines/Springer_Guidelines_for_Authors_of_Proceedings.pdf">Springer Proceedings Guidelines for Authors</a><br>
+
+        <!--Submitted papers should neither be previously published nor under consideration for publication elsewhere.
+            All papers will be refereed through a peer review process.-->
+        <br />
+        
     </div>
     <!--================Contact Area =================-->
 
