--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 						</div>
 						
 					</div>
-					<h4>5-6, June, 2020</h4>
-					<p>Organized by <h3 style="padding:0px;"><span style="margin-bottom: 20px;">Department of Computer Science and Engineering</span> <br /><span style="margin-bottom:20px;">Vasavi College of Engineering (Autonomous) </span><br />Hyderabad, Telangana, India</h3>
+					<h3>5-6, June, 2020</h3>
+					<p><span style="font-size: 20px;">Organized by</span> <h3 style="padding:0px;"><span style="margin-bottom: 20px;">Department of Computer Science and Engineering</span> <br /><span style="margin-bottom:20px;">Vasavi College of Engineering (Autonomous) </span><br />Hyderabad, Telangana, India</h3>
 					</p>
 				</div>
 			</div>
