added images to the committees

--- a/committees.html
+++ b/committees.html
@@ -120,14 +120,16 @@
         <table class="table table-striped">
             <tbody>
                 <tr>
-                    <th scope="row">1</th>
-                    <td>Sri M. Krishna Murthy</td>
-                    <td>Secretary, Vasavi Academy of Education </td>
+                    <th scope="row" style="vertical-align:middle;">1</th>
+                    <td style="vertical-align:middle;">Sri M. Krishna Murthy</td style="vertical-align:middle;">
+                    <td style="vertical-align:middle;padding-left: 130px;">Secretary, Vasavi Academy of Education </td>
+                    <td><img src="./img/committees/MKM.jpg" height="70px" width="70px"></td>
                 </tr>
                 <tr>
-                    <th scope="row">2</th>
-                    <td>Sri P. Balaji</td>
-                    <td>CEO, VCE</td>
+                    <th scope="row" style="vertical-align:middle;">2</th>
+                    <td style="vertical-align:middle;">Sri P. Balaji</td>
+                    <td style="vertical-align:middle;padding-left: 130px;">CEO, VCE</td>
+                    <td><img src="./img/committees/Balaji CEO.jpg" height="70px" width="70px"></td>
                 </tr>
             </tbody>
         </table>
@@ -138,14 +140,16 @@
         <table class="table table-striped">
             <tbody>
                 <tr>
-                    <th scope="row">1</th>
-                    <td>Dr. S. V. Ramana</td>
-                    <td>Principal, VCE</td>
+                    <th scope="row" style="vertical-align:middle;">1</th>
+                    <td style="vertical-align:middle;">Dr. S. V. Ramana</td>
+                    <td style="vertical-align:middle;padding-left: 130px;">Principal, VCE</td>
+                    <td><img src="./img/committees/principal_SVR.jpg" height="70px" width="70px"></td>
                 </tr>
                 <tr>
-                    <th scope="row">2</th>
-                    <td>Dr. G.V. Ramana Murty</td>
-                    <td>Director Academic & Administration, VCE</td>
+                    <th scope="row" style="vertical-align:middle;">2</th>
+                    <td style="vertical-align:middle;">Dr. G.V. Ramana Murty</td>
+                    <td style="vertical-align:middle;padding-left: 130px;">Director Academic & Administration, VCE</td>
+                    <td><img src="./img/committees/RamanMurthy.jpg" height="70px" width="70px"></td>
                 </tr>
             </tbody>
         </table>
@@ -154,14 +158,16 @@
         <table class="table table-striped">
             <tbody>
                 <tr>
-                    <th scope="row">1</th>
-                    <td>Dr. T. Adilakshmi</td>
-                    <td>Professor & HOD, CSE, VCE</td>
+                    <th scope="row" style="vertical-align:middle;">1</th>
+                    <td style="vertical-align:middle;">Dr. T. Adilakshmi</td>
+                    <td style="vertical-align:middle;padding-right: 105px;">Professor & HOD, CSE, VCE</td>
+                    <td><img src="./img/committees/HOD.png" height="70px" width="70px"></td>
                 </tr>
                 <tr>
-                    <th scope="row">2</th>
-                    <td>Dr. Suresh Chandra Satapathy</td>
-                    <td style="padding-right:245px;">KIIT DU, Bhubaneswar</td>
+                    <th scope="row" style="vertical-align:middle;">2</th>
+                    <td style="vertical-align:middle;">Dr. Suresh Chandra Satapathy</td>
+                    <td style="vertical-align:middle;padding-right: 105px;">KIIT DU, Bhubaneswar</td>
+                    <td><img src="./img/committees/sathapathy.png" height="70px" width="70px"></td>
                 </tr>
             </tbody>
         </table>
@@ -172,15 +178,17 @@
         <table class="table table-striped">
             <tbody>
                 <tr>
-                    <th scope="row">1</th>
-                    <td>Dr. Nagaratna P. Hegde</td>
-                    <td style="padding-left:185px;">Professor, CSED, VCE</td>
+                    <th scope="row" style="vertical-align:middle;">1</th>
+                    <td style="vertical-align:middle;">Dr. Nagaratna P. Hegde</td>
+                    <td style="vertical-align:middle; padding-left:105px">Professor, CSED, VCE</td>
+                    <td><img src="./img/committees/Nagarathna.jpg" height="70px" width="70px"></td>
                 </tr>
                 <tr>
-                    <th scope="row">2</th>
-                    <td>Dr. Vikrant Bhateja</td>
-                    <td style="text-align:center;padding-left: 160px;">Professor, ECED, Head of Academics and Quailty
-                        Control, SRMGPC, Lucknow</td>
+                    <th scope="row" style="vertical-align:middle;">2</th>
+                    <td style="vertical-align:middle;">Dr. Vikrant Bhateja</td>
+                    <td style="vertical-align:middle;padding-left:105px">Professor, ECED,<br /> Head of Academics and Quailty
+                        Control, <br/>SRMGPC, Lucknow</td>
+                        <td><img src="./img/committees/vikranth.jpeg" height="70px" width="70px"></td>
                 </tr>
             </tbody>
         </table>
